--- a/index.html
+++ b/index.html
@@ -824,6 +824,15 @@ function jsDeobfuscate() {
   }
 }
 </script>
-
+<script>
+window.onerror = function (msg, src, line, col, err) {
+  alert(
+    "JS ERROR:\n" +
+    msg + "\n" +
+    "line: " + line + "\n" +
+    (err ? err.stack : "")
+  );
+};
+</script>
 </body>
 </html>
